[metadata]
name = tiki-topple
version = 0.0.1
description = Tiki Topple
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tyleryep/tiki-topple
author = Tyler Yep
author_email = tyep@cs.stanford.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = tiki_topple
python_requires = >=3.10
include_package_data = True

[options.package_data]
tiki_topple = py.typed

[mypy]
strict = True
show_error_codes = True
enable_error_code = ignore-without-code

[pylint.main]
evaluation = 10.0 - ((float(5 * error + warning + refactor + convention + info) / statement) * 10)

[pylint.MESSAGES CONTROL]
enable =
    useless-suppression,
    deprecated-pragma,
    use-symbolic-message-instead,
disable =
    missing-module-docstring,
    missing-function-docstring,
    missing-class-docstring,
    too-few-public-methods,
    fixme,

[isort]
profile = black

[flake8]
max-line-length = 88
extend-ignore = E203,F401
